fix: footer spacing

--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -24,8 +24,3 @@ main {
   position: relative;
   text-align: center;
 }
-
-
-.footer {
-  margin-top: 3em;
-}
